# SENTINEL

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GEMINI.md  LICENSE  README.md  SECURITY.md  SENTINEL_PROJECT_BRIEF.md  sentinel_visual_roadmap.md
sentinel-agent/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  sentinel.spec
sentinel-agent/data/: regions.json
sentinel-agent/data/jobs/: covenant.json  ghost_networks.json  nexus.json  steel_syndicate.json  wanderers.json
sentinel-agent/prompts/: core.md  gm_guidance.md  mechanics.md
sentinel-agent/prompts/advisors/: ember.md  nexus.md  witness.md
sentinel-agent/prompts/examples/: npc_interaction.md
sentinel-agent/prompts/local/: core.md  mechanics.md
sentinel-agent/prompts/phases/: between.md  briefing.md  debrief.md  epilogue.md  execution.md  planning.md  resolution.md
sentinel-agent/prompts/rules/: core_logic.md  narrative_guidance.md
sentinel-agent/scripts/: check_mechanics.py  compare_campaigns.py  generate_braille_portraits.py  import_cipher.py
sentinel-agent/src/: __init__.py  agent.py
sentinel-agent/src/api/: __init__.py  main.py  routes.py  schemas.py  server.py  websocket.py
sentinel-agent/src/context/: __init__.py  ambient_context.py  digest.py  packer.py  tokenizer.py  window.py
sentinel-agent/src/interface/: __init__.py  __main__.py  braille.py  (+16 more)
sentinel-agent/tests/: __init__.py  conftest.py  test_api.py  test_chronicle.py  test_context.py  test_council.py  test_disposition.py  test_dormant_threads.py  test_event_queue.py  test_faction_shifts.py  test_headless.py  test_kimi_backend.py  test_leverage.py  test_local_mode.py  test_lore.py  test_memory_triggers.py  test_mistral_vibe_backend.py  test_npc_rules.py  test_session_bridge.py  test_simulation.py  test_social_energy.py  test_templates.py  test_wiki.py  test_wiki_mocs.py  test_wiki_watcher.py
sentinel-campaign/: README.md  pyproject.toml
sentinel-mcp/: README.md  pyproject.toml
(+370 files in other folders)
