[project]
name = "sentinel-agent"
version = "0.1.0"
description = "AI Game Master for SENTINEL TTRPG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC BY-NC 4.0"}

dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
memvid = [
    "memvid-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "memvid-sdk>=0.1.0",
]

[project.scripts]
sentinel = "src.interface.cli:main"
sentinel-enhanced = "src.interface.enhanced_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
