[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-campaign"
version = "0.2.0"
description = "MCP server for SENTINEL campaign data: factions, history, and lore"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sentinel-campaign = "sentinel_campaign.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_campaign"]
