[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-factions"
version = "0.1.0"
description = "MCP server for SENTINEL faction lore and campaign tracking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sentinel-factions = "sentinel_factions.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_factions"]
